--- a/posts/templates/_card.html
+++ b/posts/templates/_card.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card my-3 col-12 col-md-5 mx-2">
     <div class="card-header">작성자</div>
     <img src="{{ post.image.url }}" alt="">
     <div class="card-body">
