--- a/posts/templates/index.html
+++ b/posts/templates/index.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 
 {% block body %}
-	{% for post in posts %}
-		{% include '_card.html' %}
-	{% endfor %}
+	<div class="row justify-content-md-center">
+		{% for post in posts %}
+			{% include '_card.html' %}
+		{% endfor %}
+	</div>
 {% endblock %}
