--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -8,10 +8,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href="#">Features</a>
-          <a class="nav-link" href="#">Pricing</a>
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+          <a class="nav-link active" aria-current="page" href="{% url 'posts:index' %}">Home</a>
+          <a class="nav-link" href="{% url 'posts:create' %}">Create</a>
         </div>
       </div>
     </div>
