--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -10,6 +10,7 @@
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="{% url 'posts:index' %}">Home</a>
           <a class="nav-link" href="{% url 'posts:create' %}">Create</a>
+          <a class="nav-link" href="{% url 'accounts:signup' %}">Signup</a>
         </div>
       </div>
     </div>
