--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -11,6 +11,7 @@
           <a class="nav-link active" aria-current="page" href="{% url 'posts:index' %}">Home</a>
           <a class="nav-link" href="{% url 'posts:create' %}">Create</a>
           <a class="nav-link" href="{% url 'accounts:signup' %}">Signup</a>
+          <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
         </div>
       </div>
     </div>
