--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -9,9 +9,13 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="{% url 'posts:index' %}">Home</a>
-          <a class="nav-link" href="{% url 'posts:create' %}">Create</a>
-          <a class="nav-link" href="{% url 'accounts:signup' %}">Signup</a>
-          <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
+          {% if user.is_authenticated %}
+            <a class="nav-link" href="{% url 'posts:create' %}">Create</a>
+            <a class="nav-link disabled" aria-disabled="true">{{ user }}</a>
+          {% else %}
+            <a class="nav-link" href="{% url 'accounts:signup' %}">Signup</a>
+            <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
+          {% endif %}
         </div>
       </div>
     </div>
